src/objects/Chemist__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area_Place__c</fullName>
        <label>Area/Place</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipName>Chemists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Head_Quarter__c</fullName>
        <label>Head Quarter</label>
        <referenceTo>Head_Quarter__c</referenceTo>
        <relationshipName>Chemists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR__c</fullName>
        <label>MR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chemists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Owner__c</fullName>
        <label>Name of the Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Pharmacist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area_Place__c</columns>
        <columns>Phone__c</columns>
        <columns>MR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pharmacist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>